# bpe-tokenizer-editor

./: .gitignore  Cargo.toml  Makefile  README.md  README_PYTHON.md  pyproject.toml
examples/: example.py
python/bpe_tokenizer_editor/: __init__.py  __init__.pyi  py.typed
src/: cli.rs  lib.rs  main.rs  python.rs  tokenizer.rs  types.rs
src/editor/: addition.rs  core.rs  management.rs  mod.rs  reindex.rs  removal.rs  sync.rs  validation.rs
tests/: test_python.py
