[package]
name = "bpe-tokenizer-editor"
version = "0.1.0"
edition = "2021"
description = "BPE Tokenizer Editor - Add/Remove tokens with consistency guarantees"
authors = ["Ali Bayram"]

[[bin]]
name = "bpe-editor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
