[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bpe-tokenizer-editor"
version = "0.1.0"
description = "High-performance BPE tokenizer editor for HuggingFace tokenizer.json files"
readme = "README_PYTHON.md"
license = {text = "MIT"}
authors = [
    {name = "Ali Bayram", email = ""}
]
keywords = ["tokenizer", "bpe", "nlp", "huggingface", "transformers", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/malibayram/bpe-tokenizer-editor"
Repository = "https://github.com/malibayram/bpe-tokenizer-editor"
Documentation = "https://github.com/malibayram/bpe-tokenizer-editor#readme"
"Bug Tracker" = "https://github.com/malibayram/bpe-tokenizer-editor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.maturin]
# Build settings
features = ["python"]
python-source = "python"
module-name = "bpe_tokenizer_editor"
bindings = "pyo3"
strip = true

# Include the README
include = [
    {path = "README_PYTHON.md", format = "sdist"},
    {path = "LICENSE", format = "sdist"},
]

# Compatibility settings
compatibility = "manylinux2014"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
